LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Result_Must_Be_Positive__c.field-meta.xml
<CustomField>
    <fullName>Result_Must_Be_Positive__c</fullName>
    <label>Result - Must Be Positive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>