LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax__c</fullName>
    <label>Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>