LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Second_Weekly_Loan_Repayment__c.field-meta.xml
<CustomField>
    <fullName>Second_Weekly_Loan_Repayment__c</fullName>
    <label>Second Weekly Loan Repayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>