LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Selected_Country_For_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Selected_Country_For_Calculation__c</fullName>
    <label>Selected Country For Calculation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>