LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Single_Adult__c.field-meta.xml
<CustomField>
    <fullName>Single_Adult__c</fullName>
    <label>Single Adult</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>