LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Stamp_Duty_and_Transfer_Fee__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty_and_Transfer_Fee__c</fullName>
    <label>Stamp Duty and Transfer Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>