LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Surplus_Shortfall__c.field-meta.xml
<CustomField>
    <fullName>Surplus_Shortfall__c</fullName>
    <label>Surplus/(Shortfall)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>