LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Surplus_Shortfall_Status__c.field-meta.xml
<CustomField>
    <fullName>Surplus_Shortfall_Status__c</fullName>
    <label>Surplus/(Shortfall) Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>