LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Test_1_Must_Be_Possitive_1__c.field-meta.xml
<CustomField>
    <fullName>Test_1_Must_Be_Possitive_1__c</fullName>
    <label>Test 1 - Must Be Possitive 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>