LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Test_1_Must_Be_Possitive_2__c.field-meta.xml
<CustomField>
    <fullName>Test_1_Must_Be_Possitive_2__c</fullName>
    <label>Test 1 - Must Be Possitive 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>