LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Test_2_Must_NOT_exceed_35_1__c.field-meta.xml
<CustomField>
    <fullName>Test_2_Must_NOT_exceed_35_1__c</fullName>
    <label>Test 2 - Must NOT exceed 35% 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>