LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Test_2_Must_NOT_exceed_35_2__c.field-meta.xml
<CustomField>
    <fullName>Test_2_Must_NOT_exceed_35_2__c</fullName>
    <label>Test 2 - Must NOT exceed 35% 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>