LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Total_Adjusted_Interest_over_Loan_Pe__c.field-meta.xml
<CustomField>
    <fullName>Total_Adjusted_Interest_over_Loan_Pe__c</fullName>
    <label>Total Adjusted Interest over Loan Pe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>