LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Total_AGI__c.field-meta.xml
<CustomField>
    <fullName>Total_AGI__c</fullName>
    <label>Total AGI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>