LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Total_Commitments_Foreign_Currency__c.field-meta.xml
<CustomField>
    <fullName>Total_Commitments_Foreign_Currency__c</fullName>
    <label>Total Commitments-Foreign Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>