LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Total_Existing_Commitments_MP__c.field-meta.xml
<CustomField>
    <fullName>Total_Existing_Commitments_MP__c</fullName>
    <label>Total Existing Commitments - MP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>