LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Total_Funds_Available__c.field-meta.xml
<CustomField>
    <fullName>Total_Funds_Available__c</fullName>
    <label>Total Funds Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>