LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Total_GFI__c.field-meta.xml
<CustomField>
    <fullName>Total_GFI__c</fullName>
    <label>Total GFI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>