LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Total_Gross_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_Gross_Income__c</fullName>
    <label>Total Gross Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>