LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Total_income_available_for_debt__c.field-meta.xml
<CustomField>
    <fullName>Total_income_available_for_debt__c</fullName>
    <label>Total income available for debt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>