LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Total_Income_GAI__c.field-meta.xml
<CustomField>
    <fullName>Total_Income_GAI__c</fullName>
    <label>Total Income - GAI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>