LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Total_Interest_over_Loan_Period__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest_over_Loan_Period__c</fullName>
    <label>Total Interest over Loan Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>