LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Total_Living_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Living_Expenses__c</fullName>
    <label>Total Living Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>