LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Total_Loan_Repayment_over_Loan_P__c.field-meta.xml
<CustomField>
    <fullName>Total_Loan_Repayment_over_Loan_P__c</fullName>
    <label>Total Loan Repayment over Loan P</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>