LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Total_Net_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_Net_Income__c</fullName>
    <label>Total Net Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>