LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Total_NFI__c.field-meta.xml
<CustomField>
    <fullName>Total_NFI__c</fullName>
    <label>Total NFI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>