LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Trade_in_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Trade_in_Allowance__c</fullName>
    <label>Trade in Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>