LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Type_of_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Applicant__c</fullName>
    <label>Type of Applicant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>