LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/X10_Dep__c.field-meta.xml
<CustomField>
    <fullName>X10_Dep__c</fullName>
    <label>10% Dep</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>