LMS/force-app/main/default/objects/Loan_Repayment_Option__c/recordTypes/Mortgage_Calculator.recordType-meta.xml
<RecordType>
    <fullName>Mortgage_Calculator</fullName>
    <active>true</active>
    <label>Mortgage Calculator</label>
</RecordType>