LMS/force-app/main/default/objects/Loan_Repayment_Option__c/recordTypes/Quote_Calculator.recordType-meta.xml
<RecordType>
    <fullName>Quote_Calculator</fullName>
    <active>true</active>
    <label>Quote Calculator</label>
</RecordType>