LMS/force-app/main/default/objects/Loan_Repayment_Option__c/recordTypes/Servicability_Calculator.recordType-meta.xml
<RecordType>
    <fullName>Servicability_Calculator</fullName>
    <active>true</active>
    <label>Servicability Calculator</label>
</RecordType>